--- a/Models/Instruments/pfd2.ac
+++ b/Models/Instruments/pfd2.ac
@@ -34,6 +34,7 @@ name "FD.pitch"
 loc -0.0037777 -0.0138258 0.124737
 data 9
 Plane.019
+texture "pfd-extra.png"
 crease 30.000000
 numvert 4
 0 -0.00058821 -0.0692111
@@ -44,16 +45,17 @@ numsurf 1
 SURF 0x0
 mat 0
 refs 4
-0 0 0
-3 0 0
-2 0 0
-1 0 0
+0 0.867188 0.894531
+3 0.867188 0.894531
+2 0.867188 0.894531
+1 0.867188 0.894531
 kids 0
 OBJECT poly
 name "FD.roll"
 loc -0.0037777 -0.00463545 0.125034
 data 9
 Plane.019
+texture "pfd-extra.png"
 crease 30.000000
 numvert 4
 0 0.0739256 -0.000588715
@@ -64,10 +66,10 @@ numsurf 1
 SURF 0x0
 mat 0
 refs 4
-0 0 0
-3 0 0
-2 0 0
-1 0 0
+0 0.867188 0.894531
+3 0.867188 0.894531
+2 0.867188 0.894531
+1 0.867188 0.894531
 kids 0
 OBJECT poly
 name "horizon"
