--- a/Models/Instruments/eicas.ac
+++ b/Models/Instruments/eicas.ac
@@ -1,7 +1,45 @@
 AC3Db
 MATERIAL "ac3dmat1" rgb 1 1 1  amb 0.2 0.2 0.2  emis 0.671 0.671 0.663  spec 0 0 0  shi 128  trans 0
 OBJECT world
-kids 1
+kids 3
+OBJECT poly
+name "engine2fire"
+loc 0.00096655 -0.0439296 -0.0278037
+texture "warnings2.png"
+crease 45.000000
+numvert 4
+0 0.00305733 -0.0253929
+0 0.00305733 0.0253928
+0 -0.00305734 0.0253928
+0 -0.00305734 -0.0253929
+numsurf 1
+SURF 0x30
+mat 0
+refs 4
+0 0.646247 0.861918
+1 0.0368993 0.861918
+2 0.0368993 0.783201
+3 0.646247 0.783201
+kids 0
+OBJECT poly
+name "engine1fire"
+loc 0.00096655 -0.0439296 0.033193
+texture "warnings2.png"
+crease 45.000000
+numvert 4
+0 -0.00305734 -0.0253929
+0 -0.00305734 0.0253928
+0 0.00305733 0.0253928
+0 0.00305733 -0.0253929
+numsurf 1
+SURF 0x30
+mat 0
+refs 4
+3 0.646247 0.955668
+2 0.0368993 0.955668
+1 0.0368993 0.876951
+0 0.646247 0.876951
+kids 0
 OBJECT group
 name "eicas"
 loc 0.000995848 -0.0336561 -0.158724
